Crash with Cycles + new autosmooth crash #39742

Closed
opened 2014-04-15 05:02:30 +02:00 by Jason Clarke · 8 comments

System Information
Mac OS X, AMD 5770

Blender Version
Broken: 2.70.02 3cf9fc

Short description of error
Some meshes are still crashing when loading them into Cycles (viewport works fine). In this particular case, the crash seems to be caused by duplicate verts left over from the spin tool (removing doubles solves the issue). But I figured you all might want to know about it.

Exact steps for others to reproduce the error
needles_crash.blend

Open the attached blend and either hit render, or switch to rendered viewport. Blender will crash. (remove doubles then render, and it won't crash)

**System Information** Mac OS X, AMD 5770 **Blender Version** Broken: 2.70.02 3cf9fc **Short description of error** Some meshes are still crashing when loading them into Cycles (viewport works fine). In this particular case, the crash seems to be caused by duplicate verts left over from the spin tool (removing doubles solves the issue). But I figured you all might want to know about it. **Exact steps for others to reproduce the error** [needles_crash.blend](https://archive.blender.org/developer/F84903/needles_crash.blend) Open the attached blend and either hit render, or switch to rendered viewport. Blender will crash. (remove doubles then render, and it won't crash)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JasonClarke

Added subscriber: @JasonClarke

Added subscriber: @mont29

Added subscriber: @mont29

It does not crash for me… with standard build, but indeed with debug one asan reported some buffer overflow.

It does not crash for me… with standard build, but indeed with debug one asan reported some buffer overflow.
Bastien Montagne self-assigned this 2014-04-15 07:29:46 +02:00

This issue was referenced by blender/blender-addons-contrib@4f1a5192c2

This issue was referenced by blender/blender-addons-contrib@4f1a5192c24595798942b6ce8d704031e9fda8de

This issue was referenced by 4f1a5192c2

This issue was referenced by 4f1a5192c24595798942b6ce8d704031e9fda8de

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4f1a5192c2.

Closed by commit 4f1a5192c2.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39742
No description provided.